<resources>
    <string name="app_name">Super_U</string>
    <string name="username">user</string>
    <string name="password">password</string>
    <string name="action_settings">Settings</string>
    <string name="register_text">新用户注册</string>
    <string name="lost_password_text">忘记密码?</string>
    <string name="login_foot">登录即代表阅读并同意</string>
    <string name="register_foot">注册即代表阅读并同意</string>
    <string name="text">服务条款</string>
    <string name="login_button">登陆</string>
    <string name="register_button">注册</string>
    <string name="login_loge">超级大学</string>
    <string name="tab_menu_alert">课程表</string>
    <string name="tab_menu_profile">信息</string>
    <string name="tab_menu_pay">推荐</string>
    <string name="tab_menu_setting">官方</string>
    <string name="r_username">Set your name</string>
    <string name="r_password">Set your password</string>
    <string name="r_c_password">Comfire your password</string>
    <string name="r_email">Your email</string>
    <string name="h_menu1">我的关注</string>
    <string name="h_menu2">浏览历史</string>
    <string name="h_menu3">我的收藏</string>
    <string name="h_menu4">关于Super_U</string>
    <string name="h_menu5">推荐给好友</string>
    <string name="h_menu_footer1">设置</string>
    <string name="h_menu_footer2">反馈</string>
    <string name="h_menu_footer3">个人中心</string>
    <string name="person_button">编辑资料</string>
    <string name="send_button">发送</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
